Updated visualizations sheet with anonymizations

--- a/src/html/sop-visualizations.html
+++ b/src/html/sop-visualizations.html
@@ -182,12 +182,12 @@ head(data)</code></pre>
 <pre><code>## # A tibble: 6 x 22
 ##   `Paper-ID` Extractor `Factor-Constructs`                  `Factor-Measurement`
 ##        &lt;dbl&gt; &lt;chr&gt;     &lt;chr&gt;                                &lt;chr&gt;               
-## 1          6 dfu       business process model               [textual; visual]   
-## 2          9 jfr       Adherence to REST API design rules;~ [rule; violation]; ~
-## 3         14 dfu       Testing approach                     [TDD; TLD]          
-## 4         48 dfu       Testing approach                     [TDD; ITL]          
-## 5         71 dfu       Tool version                         [tab;panels]        
-## 6         77 jfr       Test migration process               [manual; tool]      
+## 1          6 rater2    business process model               [textual; visual]   
+## 2          9 rater1    Adherence to REST API design rules;~ [rule; violation]; ~
+## 3         14 rater2    Testing approach                     [TDD; TLD]          
+## 4         48 rater2    Testing approach                     [TDD; ITL]          
+## 5         71 rater2    Tool version                         [tab;panels]        
+## 6         77 rater1    Test migration process               [manual; tool]      
 ## # i 18 more variables: `Response-Constructs` &lt;chr&gt;,
 ## #   `Response-Measurement` &lt;chr&gt;, `Subject-Number` &lt;chr&gt;, `Subject-Type` &lt;chr&gt;,
 ## #   Method &lt;chr&gt;, `Test Type` &lt;chr&gt;, Period &lt;chr&gt;, Sequence &lt;chr&gt;, Skill &lt;chr&gt;,
