--- a/src/html/sop-interrater-agreement.html
+++ b/src/html/sop-interrater-agreement.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Anonymous Author" />
+<meta name="author" content="Julian Frattini" />
 
 <meta name="date" content="2024-05-22" />
 
@@ -166,7 +166,7 @@ pre code {
 
 
 <h1 class="title toc-ignore">Assessing the State of Practice of addressing Threats to Validity in Crossover-Design Experiments: Interrater Agreement</h1>
-<h4 class="author">Anonymous Author</h4>
+<h4 class="author">Julian Frattini</h4>
 <h4 class="date">2024-05-22</h4>
 
 </div>
